added unprac and some minor bugfixes

--- a/betterDm.cfg
+++ b/betterDm.cfg
@@ -8,4 +8,15 @@ mp_respawn_immunitytime 4;
 mp_roundtime 99999;
 mp_limitteams 10;
 bot_quota_mode fill;
-mp_restartgame 1
+mp_restartgame 1;
+bot_kick;
+bot_add_ct;
+bot_add_ct;
+bot_add_ct;
+bot_add_ct;
+bot_add_ct;
+bot_add_t;
+bot_add_t;
+bot_add_t;
+bot_add_t;
+bot_add_t
