--- a/mybinds.cfg
+++ b/mybinds.cfg
@@ -17,6 +17,7 @@ bind MOUSE2 "+attack2";
 //alias "+recoilatk" "+attack;cl_crosshair_recoil 1;"
 //alias "-recoilatk" "-attack;cl_crosshair_recoil 0;"
 bind "MOUSE1" "+attack";
+bind p "noclip";
 bind l "sv_rethrow_last_grenade";
 bind O "ent_fire smokegrenade_projectile kill; ent_fire decoy_projectile kill;ent_fire hegrenade_projectile kill;ent_fire incgrenade_projectile kill;ent_fire molotov_projectile kill; stopsound";
 bind MOUSE5 "+voicerecord";
