added lastRandomSpawn + updated mybinds.cfg

--- a/mybinds.cfg
+++ b/mybinds.cfg
@@ -132,6 +132,8 @@ bind "mouse4" "xhair"
 bind 1 "switchtoprimary";
 bind 2 "switchtosecondary";
 
+bind q "randomSpawn";
+bind m "lastRandomSpawn";
 
 
 
