added bot_stop into prac.cfg

--- a/prac.cfg
+++ b/prac.cfg
@@ -13,6 +13,7 @@ ammo_grenade_limit_total 5;
 bot_freeze true;
 bot_kick;
 bot_dont_shoot true;
+bot_stop 1;
 bot_zombie true;
 mp_warmup_offline_enabled true;
 mp_warmup_start;
