--- a/unprac.cfg
+++ b/unprac.cfg
@@ -10,6 +10,7 @@ ammo_grenade_limit_total 4;
 bot_freeze false;
 bot_dont_shoot false;
 bot_zombie false;
+bot_stop 0;
 mp_warmup_offline_enabled false;
 mp_round_restart_delay 7;
 mp_startmoney 800;
