Added aliases for workshop maps

--- a/workshopAliases.cfg
+++ b/workshopAliases.cfg
@@ -1,13 +1,13 @@
-alias lake "3070563536";
-alias poseidon "3522144043";
-alias berghain "3519514392";
-alias shipment "3472828046";
-alias transit "3542662073";
-alias splat "3439120481";
-alias shortdust "3483894219";
-alias safehouse "3542772009";
-alias rooftop "3536622725";
-alias lublin "3507728279";
-alias Minecraft "3542847259";
-alias assembly "3071005299";
-alias memento "3165559377";
+alias lake "host_workshop_map 3070563536";
+alias poseidon "host_workshop_map 3522144043";
+alias berghain "host_workshop_map 3519514392";
+alias shipment "host_workshop_map 3472828046";
+alias transit "host_workshop_map 3542662073";
+alias splat "host_workshop_map 3439120481";
+alias shortdust "host_workshop_map 3483894219";
+alias safehouse "host_workshop_map 3542772009";
+alias rooftop "host_workshop_map 3536622725";
+alias lublin "host_workshop_map 3507728279";
+alias Minecraft "host_workshop_map 3542847259";
+alias assembly "host_workshop_map 3071005299";
+alias memento "host_workshop_map 3165559377";
