fixed wingman typo

--- a/wingman.cfg
+++ b/wingman.cfg
@@ -105,5 +105,5 @@ custom_bot_difficulty                5;
 sv_auto_adjust_bot_difficulty        false;
 bot_autodifficulty_threshold_high    2.0;
 bot_autodifficulty_threshold_low     -2.0;
-mp_restart_game 1;
+mp_restartgame 1;
 mp_warmup_start;
