fixed wingman typo

--- a/workshopAliases.cfg
+++ b/workshopAliases.cfg
@@ -11,3 +11,4 @@ alias lublin "host_workshop_map 3507728279";
 alias Minecraft "host_workshop_map 3542847259";
 alias assembly "host_workshop_map 3071005299";
 alias memento "host_workshop_map 3165559377";
+alias miragebricks "host_workshop_map 3464733042";
