--- a/workshopAliases.cfg
+++ b/workshopAliases.cfg
@@ -12,4 +12,4 @@ alias Minecraft "host_workshop_map 3542847259";
 alias assembly "host_workshop_map 3071005299";
 alias memento "host_workshop_map 3165559377";
 alias miragebricks "host_workshop_map 3464733042";
-alias express "3369669148";
+alias express "host_workshop_map 3369669148";
